--- a/index.html
+++ b/index.html
@@ -1,53 +1,72 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Udemy les</title>
-</head>
 
-<body>
-	<h3>Books and teaching</h3>
-	<ul>
-		<li>allalal</li>
-		<li>ook iets</li>
-	</ul>
-	<hr>
-	<h3>werk ervaring</h3>
-	<table cellspacing="10">
-		<thead>
-			<tr>
-				<th>Datums</th>
-				<th>Werk</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>2010</td>
-				<td>webdesgin</td>
-			</tr>
-		</tbody>
-	</table>
-	<hr>
-<h3>Skills</h3>
-	
-	
-	<table cellspacing="10">
-		<tr>
-			<td>develepoment</td>
-			<td>✨✨✨</td>
-		</tr>
-		<tr>
-			<td>photography</td>
-			<td>✨✨✨✨✨</td>
-		</tr>
-		<tr>
-			<td>html</td>
-			<td>✨✨✨✨✨</td>
-		</tr>
-		<tr>
-			<td>css</td>
-			<td>✨✨✨</td>
-		</tr>
-	</table>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Riemersma</title>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+
+  <body>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="img/foto.png" alt="picture"></td>
+        <td><h1>Riemersma</h1>
+        <p>verhaaltje</p></td>
+      </tr>
+    </table>
+    <hr>
+    <h3>Books and Teaching</h3>
+    <ul>
+      <li>The Complete iOS App Development Bootcamp</li>
+      <li>The Complete Web Development Bootcamp</li>
+    </ul>
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2009-2010</td>
+          <td>Researcher at The Institute of Cognitive Neurosciences</td>
+        </tr>
+        <tr>
+          <td>2010-2013</td>
+          <td>Lead Developer at Tempo App</td>
+        </tr>
+        <tr>
+          <td>2013-2015</td>
+          <td>Clinical Doctor at the National Health Service</td>
+        </tr>
+      </tbody>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>iOS Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+       <tr>
+        <td>Programming</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Photography</td>
+        <td>⭐️⭐️</td>
+      </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
+  </body>
 </html>
